<resources>
    <string name="force_restore_backup">Force Restore Backup</string>
    <string name="force_restore_backup_summary">Launch the restore backup screen manually. Use this if you skipped restoration during setup.</string>
    <string name="show_message_device_source">Show Message Device Source</string>
    <string name="show_message_device_source_sum">Shows whether a message was sent from the primary device or a linked device</string>
    <string name="app_name" translatable="false">WAPlusX</string>
    <string name="app_desc">WhatsApp Enhancer Module</string>
    <string name="antirevoke">Anti-Revoke Messages</string>
    <string name="antirevoke_sum">Messages will not be deleted for you</string>
    <string name="ghostmode">Hide Typing</string>
    <string name="ghostmode_sum">Users cannot see that you are typing</string>
    <string name="ghostmode_r">Hide Recording Audio</string>
    <string name="ghostmode_sum_r">Users cannot see that you are recording audio</string>
    <string name="hidetag">Hide \"Forwarded\" Tag</string>
    <string name="hidetag_sum">Forward messages without the tag \"Forwarded\"</string>
    <string name="hidestatusview">Hide Status View</string>
    <string name="hidestatusview_sum">View statuses without users knowing</string>
    <string name="hideread">Hide Blue Ticks</string>
    <string name="hideread_sum">View messages within conversation screen without users knowing</string>
    <string name="perso">Customization</string>
    <string name="segundosnahora">Seconds on Timestamp</string>
    <string name="segundosnahora_sum">Show seconds next to any timestamp in the WhatsApp app</string>
    <string name="textonahora">Text next to Timestamp</string>
    <string name="viewonce">Unlimited View Once</string>
    <string name="viewonce_sum">Allows you to open view once media multiple times</string>
    <string name="antirevokestatus">Anti-Delete Status</string>
    <string name="antirevokestatus_sum">View statuses that users have since deleted</string>
    <string name="hidereceipt">Hide Delivered</string>
    <string name="hide_delivered_forced">Hide Delivered (forced)</string>
    <string name="hide_delivered_forced_sum">This forces the message to be hidden from receiving but can cause a delay in receiving the message</string>
    <string name="lorem_ipsum_dolor" translatable="false">Lorem Ipsum Dolor</string>
    <string name="lorem_ipsum_dolor_sum" translatable="false">Lorem ipsum dolor sit amet,consectetur adipiscing elit. Etiam eget ligula eu lectus lobortis condimentum.</string>
    <string name="hidereceipt_sum">Users will not know that their messages have been delivered to you\n(CAUTION: May cause delay in receiving messages)</string>
    <string name="ampm">Time in 12-Hour Format</string>
    <string name="statusdowload">Download and Share Status</string>
    <string name="statusdowload_sum">Shows two buttons to share and download status</string>
    <string name="videoquality">HD Quality Videos</string>
    <string name="videoquality_sum">Send videos in HD quality, by default</string>
    <string name="colors_customization">Customize your colors</string>
    <string name="colors_customization_sum">Change all colors in your WhatsApp (Working only in Dark Theme)</string>
    <string name="changecolor_mode">Color source</string>
    <string name="changecolor_mode_manual">Color picker</string>
    <string name="changecolor_mode_monet">Automatic (Monet, Android 12+)</string>
    <string name="general">General</string>
    <string name="restart_whatsapp">Restart WhatsApp</string>
    <string name="conversation">Conversation Screen</string>
    <string name="primary_color">Primary Color</string>
    <string name="background_color">Background Color</string>
    <string name="novaconfig">New Settings Style</string>
    <string name="novaconfig_sum">Enable the new settings style, with profile photo on home screen toolbar</string>
    <string name="novofiltro">Search Functions</string>
    <string name="novofiltro_sum">Choose between Search Icon, Search Bar, or No Search</string>
    <string name="menuwicon">Menu Icons</string>
    <string name="menuwicon_sum">Add icons next to menu options across the app</string>
    <string name="freezelastseen">Freeze Last Seen</string>
    <string name="freezelastseen_sum">Your last seen time will be frozen\n(CAUTION: You will not see any presence updates from other users, like typing, recording, online)</string>
    <string name="removeforwardlimit_sum">Remove forward limit for 5 chats (normal) and 1 chat (multiple times)\n(Note: Use with caution, you may be banned for spam)</string>
    <string name="removeforwardlimit">Remove Forward Limit</string>
    <string name="showname">Show Name</string>
    <string name="showname_sum">Show your profile name at the top of home screen, instead of \"WhatsApp\"</string>
    <string name="showbio_sum">Show your bio below the title of toolbar</string>
    <string name="showbio">Show Bio</string>
    <string name="bubble_left">Left Bubble</string>
    <string name="bubble_right">Right Bubble</string>
    <string name="loading">Loading</string>
    <string name="imagequality">HD Quality Images</string>
    <string name="imagequality_sum">Send images in HD quality, by default</string>
    <string name="downloadviewonce">Download View Once</string>
    <string name="downloadviewonce_sum">Show button to download view once media</string>
    <string name="separate_groups">Separate Groups</string>
    <string name="separate_groups_sum">Separate your chats by: Groups, Private Chats, Status, Calls, Communities</string>
    <string name="blueonreply">Send Blue Ticks upon Reply</string>
    <string name="blueonreply_sum">Sends blue ticks after replying to a message\n(NOTE: Must have \"Hide Blue Ticks\" active)</string>
    <string name="hide_archived_chat">Hide Archived Chats</string>
    <string name="hide_archived_chat_sum">Hide archived chats, to access click 5 times or hold on the \"WhatsApp\" title in the header on Home Screen</string>
    <string name="hide_once_view_seen">Hide View Once Seen</string>
    <string name="hide_once_view_seen_sum">Hide that view one media has been seen</string>
    <string name="call_blocker">Block Calls</string>
    <string name="call_blocker_sum">Block WhatsApp calls based on privacy type</string>
    <string name="show_online_dot_in_conversation_list">Show Online Dot in Conversation List</string>
    <string name="show_online_dot_in_conversation_list_sum">Show a green online dot on home screen\n(NOTE: Must activate show online for everyone in WhatsApp\'s Privacy Settings menu)</string>
    <string name="show_dnd_button">Show DND Button</string>
    <string name="show_dnd_button_sum">Show button for DND Mode on home screen toolbar</string>
    <string name="dev4mod">Dev4Mod (Contributor)</string>
    <string name="disable_pinned_limit">Disable Pinned Chats Limit</string>
    <string name="disable_pinned_limit_sum">Disable limit of 3 pinned chats</string>
    <string name="delete_for_everyone_all_messages">Increase limit of &quot;Delete for everyone&quot; option</string>
    <string name="delete_for_everyone_all_messages_sum">Increases the limit to 3 days in the option to delete messages for everyone</string>
    <string name="antirevoke_buttons_desable">Disabled</string>
    <string name="antirevoke_buttons_show_text">Show Text</string>
    <string name="antirevoke_buttons_show_icon">Show Icon</string>
    <string name="call_blocker_buttons_no_block">No Block</string>
    <string name="call_blocker_buttons_all_block">Block all calls</string>
    <string name="call_blocker_buttons_only_unknown_block">Block only unknown numbers</string>
    <string name="show_edited_message_history">Show Edited Message History</string>
    <string name="show_edited_message_history_sum">Show edited message history when clicking \"Edited\" on a message</string>
    <string name="dnd_message">When Do Not Disturb mode is on, you will be unable to send or receive messages</string>
    <string name="dnd_mode_title">DND Mode</string>
    <string name="activate">Activate</string>
    <string name="cancel">Cancel</string>
    <string name="edited_history">Edited History</string>
    <string name="message_original">Original Message</string>
    <string name="new_chat">New Chat</string>
    <string name="number_with_country_code">Number with country code</string>
    <string name="message">Message</string>
    <string name="download">Download</string>
    <string name="reboot_whatsapp">(Restart WhatsApp)</string>
    <string name="error_when_saving_try_again">Error when saving, try again</string>
    <string name="saved_to">"Saved to "</string>
    <string name="hide_tabs_on_home">Hide Tabs on Home</string>
    <string name="hide_tabs_on_home_sum">Hide tabs on the home screen such as Updates, Communities and Calls</string>
    <string name="communities">Communities</string>
    <string name="calls">Calls</string>
    <string name="updates">Updates</string>
    <string name="about">About</string>
    <string name="igstatus_on_home_screen">Enable IGStatus on Home Screen</string>
    <string name="igstatus_on_home_screen_sum">Show status style Instagram in Home Screen</string>
    <string name="chatfilter_no_search">No search</string>
    <string name="chatfilter_search_icon">Search icon</string>
    <string name="chatfilter_search_bar">Search bar</string>
    <string name="remove_channel_recomendations">Remove Channel Recomendations</string>
    <string name="remove_channel_recomendations_sum">Remove Channel Recomendations from tab Status</string>
    <string name="remove_see_more_button">Remove \"See More\" Button</string>
    <string name="remove_see_more_button_">Disable \"See More\" button and show all long message</string>
    <string name="tools">Tools</string>
    <string name="title_home">Home</string>
    <string name="privacy">Privacy</string>
    <string name="module_enabled">Module Enabled</string>
    <string name="version_s">Version %s</string>
    <string name="module_disabled">Module disabled</string>
    <string name="whatsapp_in_background">WhatsApp in background</string>
    <string name="whatsapp_is_not_running_or_has_not_been_activated_in_lsposed">Whatsapp is not running or has not been activated in Lsposed</string>
    <string name="business_is_not_running_or_has_not_been_activated_in_lsposed">Business is not running or has not been activated in Lsposed</string>
    <string name="restart_wpp">It is necessary to restart WhatsApp for the changes in Wa Enhancer to take effect.\n\nDo you want to restart?</string>
    <string name="prop_id">Property ID</string>
    <string name="prop_description">Description (Optional)</string>
    <string name="prop_value">Value</string>
    <string name="prop_type_boolean">Boolean</string>
    <string name="prop_type_integer">Integer</string>
    <string name="separate_favorites">Separate Favorites</string>
    <string name="bottom_navigation_settings">Bottom Navigation Settings</string>
    <string name="bottom_bar_mode">Bottom bar label mode</string>
    <string name="bottom_navigation_drag_hint">Drag to reorder tabs</string>
    <string name="bottom_navigation_restart_hint">Changes require a restart to apply correctly</string>
<string name="schedule_image_attached">Image attached</string>
    <string name="scheduled_messages">Scheduled Messages</string>
    <string name="scheduled_messages_monitoring">Waiting for schedules</string>
    <string name="scheduled_messages_empty">No scheduled messages</string>
    <string name="scheduled_messages_desc">Create and manage automated messages to be sent at specific times.</string>
    <string name="create_scheduled_message">Create Schedule</string>
    <string name="swipe_conversation_action_edit">Edit</string>
    <string name="swipe_conversation_action_delete">Delete</string>
</resources>